[FIX] analytic: fix styling of analytic distribution tags widget
The analytic distribution widget in the Analytic Distribution Model form displayed its selection field on a new line, making it too large and odd. This PR fixes the styling and simplifies the widget.

--- a/addons/analytic/static/src/components/analytic_distribution/analytic_distribution.scss
+++ b/addons/analytic/static/src/components/analytic_distribution/analytic_distribution.scss
@@ -1,4 +1,39 @@
-.analytic_distribution {
+.o_field_analytic_distribution {
+
+    .analytic_distribution_placeholder {
+        height: 1.5em;
+        width: 20px;
+    }
+
+    .o_input_dropdown {
+        flex: 1 0 20px;
+
+        &:focus {
+            outline: none;
+        }
+
+        &:hover {
+            .o_dropdown_button {
+                display: unset;
+            }
+        }
+
+        .o_dropdown_button {
+            display: none;
+        }
+    }
+
+    .badge {
+        margin: 1px 2px 1px 0;
+        border: none;
+        padding-left: 0.6em;
+        padding-right: 0.6em;
+        min-width: unset;
+
+        .o_delete {
+            padding-left: 4px;
+        }
+    }
 
     .analytic_distribution_popup {
         width: 400px;
@@ -30,24 +65,4 @@
             outline: none !important;
         }
     }
-
-    .tag-list {
-        .badge {
-            margin: 1px 2px 1px 0;
-            border: none;
-
-            .o_delete {
-                padding-left: 4px;
-            }
-        }
-    }
-
-    .hidden-focus {
-        // focus to this element is required but we want to hide the blue outline
-        &:focus {
-            // z-index: -10;
-            outline: none;
-        }
-    }
-
 }
